[gd_scene load_steps=7 format=3 uid="uid://buby7nquqtjp"]

[ext_resource type="Texture2D" uid="uid://ba5gbnx8cinw2" path="res://Assets/Enemies/spaceship5-2.png" id="1_8y3rp"]
[ext_resource type="Script" path="res://actors/entities/Enemy.gd" id="2_2fiq6"]
[ext_resource type="AudioStream" uid="uid://rqyg6wryjs6x" path="res://Assets/sfx/enemy_kaboom.mp3" id="3_2tdbp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pqg0u"]
radius = 8.31341

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbrio"]
bg_color = Color(0.509804, 0.498039, 0.505882, 1)
skew = Vector2(0.8, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7iol"]
bg_color = Color(0.6, 0.215686, 0.219608, 1)
skew = Vector2(0.8, 0)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[node name="Enemy" type="Sprite2D"]
scale = Vector2(3.24999, 3.24999)
texture = ExtResource("1_8y3rp")
script = ExtResource("2_2fiq6")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_pqg0u")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Enemy_Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2tdbp")
pitch_scale = 3.31
max_polyphony = 10

[node name="HP" type="ProgressBar" parent="."]
offset_left = -17.0
offset_top = -16.0
offset_right = 13.0
offset_bottom = -11.0
theme_override_styles/background = SubResource("StyleBoxFlat_qbrio")
theme_override_styles/fill = SubResource("StyleBoxFlat_b7iol")
value = 40.0
show_percentage = false

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
